Hampir final sebelum expert review

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,28 +9,21 @@
 </head>
 
 <body>
-  <header>
-    <div class="logo">
-      <img src="../global/assets/icons/rubik.png" alt="">
-    </div>
-    <div id="search-bar">
-      <input type="text" name="search-bar" id="input">
-      <img src="../global/assets/icons/search.svg" alt="search icon">
-    </div>
-    <div class="header-button-wrapper">
-      <div id="login-header-button">
-        <img src="../global/assets/icons/user.png" alt="">
+  <header class="container center sbet bcol3">
+      <img src="../global/icons/image-placeholder.png" id="header-logo" style="width: 20px; height: 20px;">
+      <div id="search-bar" class="container center rad5 bcol2 f1">
+          <input type="text" placeholder="Search" class="res-input bcol-tsp f1">
+          <img src="../global/icons/search.svg">
       </div>
-      <div id="history-header-button">
-        <img src="" alt="">
+      <div id="header-button-wrapper" class="container gap15">
+          <div id="login"><img src="../global/icons/user.png" class="button bcol1 col1 f1"></div>
+          <div id="menu"><img src="../global/icons/user.png" ></div>
+          <div id="history"><img src=""></div>
+          <div id="account"><img src="../global/icons/user.png"></div>
       </div>
-      <div id="account-order-button">
-        <img src="../global/assets/icons/user.png" alt="">
-      </div>
-    </div>
   </header>
   <div class="promo">
-    <img src="Carousel.png" class="foto-promo">
+    <img src="../global/imgs/profile-banner.png" class="foto-promo">
   </div>
   <div class="background">
     <div class="topbar">
