--- a/register/register.html
+++ b/register/register.html
@@ -30,7 +30,7 @@
         <input type="email" id="email" placeholder="Email" required>
 
 
-        <input class="button" type="submit" value="Create New Account">
+        <a href="../index.html"><input class="button" type="submit" value="Create New Account"></a>
       </fieldset>
       <p class="no-account">Already have an account? <a href="../login/login.html" id="login">Login</a></p>
     </div>
