--- a/register/register.html
+++ b/register/register.html
@@ -12,8 +12,8 @@
 <body class="container">
   <section id="carousel">
     <div id="slider">
-      <img id="slide-1" src="../global/assets/imgs/salad.jpg" alt="1">
-      <img id="slide-2" src="../global/assets/imgs/spinach-omelet.jpg" alt="2">
+      <img id="slide-1" src="../global/imgs/salad.jpg" alt="1">
+      <img id="slide-2" src="../global/imgs/spinach-omelet.jpg" alt="2">
     </div>
     <div class="slider-nav">
       <button id="button-1"></button>
@@ -30,7 +30,7 @@
         <input type="email" id="email" placeholder="Email" required>
 
 
-        <a href="../index.html"><input class="button" type="submit" value="Create New Account"></a>
+        <input class="button" type="submit" value="Create New Account">
       </fieldset>
       <p class="no-account">Already have an account? <a href="../login/login.html" id="login">Login</a></p>
     </div>
