fix sitcky header profile

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,21 +9,28 @@
 </head>
 
 <body>
-  <header class="container center sbet bcol3">
-      <img src="../global/icons/image-placeholder.png" id="header-logo" style="width: 20px; height: 20px;">
-      <div id="search-bar" class="container center rad5 bcol2 f1">
-          <input type="text" placeholder="Search" class="res-input bcol-tsp f1">
-          <img src="../global/icons/search.svg">
+  <header>
+    <div class="logo">
+      <a href="../index.html"><img src="../global/icons/rubik.png" alt=""></a>
+    </div>
+    <div id="search-bar">
+      <input type="text" name="search-bar" id="input">
+      <img src="../global/icons/search.svg" alt="search icon">
+    </div>
+    <div class="header-button-wrapper">
+      <div id="login-header-button">
+        <a href="../login/login.html"><img src="../global/icons/user.png" alt=""></a>
       </div>
-      <div id="header-button-wrapper" class="container gap15">
-          <div id="login"><img src="../global/icons/user.png" class="button bcol1 col1 f1"></div>
-          <div id="menu"><img src="../global/icons/user.png" ></div>
-          <div id="history"><img src=""></div>
-          <div id="account"><img src="../global/icons/user.png"></div>
+      <div id="history-header-button">
+        <a href="../order-history/history.html"><img src="" alt=""></a>
       </div>
+      <div id="account-order-button">
+        <a href="profile.html"><img src="../global/assets/icons/user.png" alt=""></a>
+      </div>
+    </div>
   </header>
   <div class="promo">
-    <img src="../global/imgs/profile-banner.png" class="foto-promo">
+    <img src="../global/assets/imgs/profile-banner.png" class="foto-promo">
   </div>
   <div class="background">
     <div class="topbar">
