fix login to menu

--- a/order-history/history.html
+++ b/order-history/history.html
@@ -14,7 +14,7 @@
             <input type="text" class="res-input bcol-tsp f1 mont ts15" placeholder="Search">
             <img src="../global/icons/search.svg">
         </div>
-        <div id="header-button-wrapper" class="container">
+        <div id="header-button-wrapper" class="container gap15">
             <div id="login"><img src="../global/icons/user.png" alt="login"></div>
             <div id="menu"><img src="../global/icons/user.png" alt="menu"></div>
             <div id="history"><img src="" alt="history"></div>
