--- a/login/login.html
+++ b/login/login.html
@@ -31,7 +31,7 @@
             value="Forgotten your password?"></a>
 
 
-        <a href="../menu/menu.html"><input class="button" type="submit" value="Sign In"></a>
+        <a href="../index.html"><input class="button" type="submit" value="Sign In"></a>
         <input class="button" type="submit" value="Continue with Google">
         <input class="button" type="submit" value="Continue with Facebook">
       </fieldset>
