--- a/profile/profile.html
+++ b/profile/profile.html
@@ -49,7 +49,7 @@
           </div>
           <div class="data_container">
             <img src="profile.png" class="foto-pengguna" />
-            <div id="biodata_title">Profile</div>
+            <div id="biodata_title" class="bio">Profile</div>
             <hr width="700">
             <div class="biodata_content_container">
               <div class="info">Name</div>
