--- a/cart & payment/cartpayment.html
+++ b/cart & payment/cartpayment.html
@@ -170,7 +170,7 @@
                 <br>
                 Rp. 29.000.000
             </h3>
-            <a href="../order-history/history.html"><input class="proceedButton" type="submit"
+            <a href="../history/history.html"><input class="proceedButton" type="submit"
                 value="Proceed"></a>
         </div>
     </div>
