--- a/index.html
+++ b/index.html
@@ -125,14 +125,7 @@
     </section>
     <section id="addons-form" class="container center jcenter w100 h100 none"></section>
 
-    <header class="container center sbet bcol3">
-        <img src="../global/icons/rubik.png" id="header-logo">
-        <div id="search-bar" class="container center rad5 bcol2 f1">
-            <input type="text" class="res-input bcol-tsp f1 mont ts15" placeholder="Search">
-            <img src="../global/icons/search.svg">
-        </div>
-        <div id="header-button-wrapper" class="container gap15"></div>
-    </header>
+    <header class="container pos-stk center sbet bcol3"></header>
 
     <main>
         <section class="carousel page-sizing pos-rel w100">
@@ -281,12 +274,12 @@
                         </div>
                     </div>
                     <div class="cart-button-wrapper container w100 sbet gap15">
-                        <button id="up-button" class="res-button pad5b rad5 bcol4" onclick="scrollToE('top', 0)">
+                        <button id="up-button" class="res-button button pad5b rad5 bcol4" onclick="scrollToE('top', 0)">
                             <svg viewBox="0 0 200 200" class="img25" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
                                 <polygon points="100,20 190,173.205 10,173.205" fill="#0D5D56"/>
                             </svg> 
                         </button>
-                        <button id="checkout-button" onclick="navToPage('../cart & payment/cartpayment.html')" class="res-button f1 bcol1 rad5">
+                        <button id="checkout-button" onclick="navToPage('../cart & payment/cartpayment.html')" class="res-button button f1 bcol1 rad5">
                             <p class="noir ts25">checkout</p>
                         </button>
                     </div>
