--- a/profile/profile.html
+++ b/profile/profile.html
@@ -6,29 +6,11 @@
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
   <link href="profile.css" rel="stylesheet" type="text/css" href="profile.css" />
+  <link rel="stylesheet" href="../global/global.css">
 </head>
 
-<body>
-  <header>
-    <div class="logo">
-      <a href="../index.html"><img src="../global/icons/rubik.png" alt=""></a>
-    </div>
-    <div id="search-bar">
-      <input type="text" name="search-bar" id="input">
-      <img src="../global/icons/search.svg" alt="search icon">
-    </div>
-    <div class="header-button-wrapper">
-      <div id="login-header-button">
-        <a href="../login/login.html"><img src="../global/icons/user.png" alt=""></a>
-      </div>
-      <div id="history-header-button">
-        <a href="../order-history/history.html"><img src="" alt=""></a>
-      </div>
-      <div id="account-order-button">
-        <a href="profile.html"><img src="../global/assets/icons/user.png" alt=""></a>
-      </div>
-    </div>
-  </header>
+<body id="user">
+  <header class="container pos-stk center sbet bcol3"></header>
   <div class="promo">
     <img src="../global/imgs/profile-banner.png" class="foto-promo">
   </div>
@@ -172,6 +154,7 @@
       </div>
     </div>
   </div>
+  <script src="../global/global.js"></script>
   <script src="profile.js"></script>
 
 </body>
