--- a/profile/profile.html
+++ b/profile/profile.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
+  <!-- <link rel="stylesheet" href="../global/global.css"> -->
   <link href="profile.css" rel="stylesheet" type="text/css" href="profile.css" />
-  <link rel="stylesheet" href="../global/global.css">
 </head>
 
 <body id="user">
@@ -30,7 +30,7 @@
             <img src="G1.jpg" id="bio-image-left" />
           </div>
           <div class="data_container">
-            <img src="profile.png" class="foto-pengguna" />
+            <img src="../global/imgs/profile.png" class="foto-pengguna" />
             <div id="biodata_title" class="bio">Profile</div>
             <hr width="700">
             <div class="biodata_content_container">
